--- a/website/newsletter/217/index.mdx
+++ b/website/newsletter/217/index.mdx
@@ -95,7 +95,9 @@ This [post](https://www.meticulous.ai/blog/lessons-from-a-decade?utm_source=this
 
 ## 📱 React-Native {#react-native}
 
-[**EAS Hosting Preview**](https://expo.dev/blog/expo-announces-eas-hosting-service)
+[![EAS Hosting Preview](/emails/issues/217/easdeploy.jpg)](https://expo.dev/blog/expo-announces-eas-hosting-service)
+
+**[EAS Hosting Preview](https://expo.dev/blog/expo-announces-eas-hosting-service)**
 
 Expo unveiled what we expected, the first-ever universal app-hosting platform that completes the vision of bringing the web DX to the cross-platform world. It enables us to seamlessly deploy Expo’s server-related features, notably Expo for Web, API Routes, and Universal React Server Components. It takes into account mobile app subtleties, such as syncing the backend/app versions. You can use either the CLI or CI (EAS Workflows). Under the hood, it’s using Cloudflare Workers. There’s a free plan.
 
