--- a/website/newsletter/217/index.mdx
+++ b/website/newsletter/217/index.mdx
@@ -42,7 +42,7 @@ Whether it’s an error or a slowdown, Sentry helps you fix issues fast and keep
 
 [![Revealed: React's experimental animations API](/emails/issues/217/viewtransition.jpg)](https://motion.dev/blog/reacts-experimental-view-transition-api)
 
-**[Revealed: React's experimental animations API**](https://motion.dev/blog/reacts-experimental-view-transition-api)\*\*
+**[Revealed: React's experimental animations API](https://motion.dev/blog/reacts-experimental-view-transition-api)**
 
 Motion creator explains the animation tradeoffs of using View Transitions and why it makes sense for React to directly integrate it into its reconciler through a new `<ViewTransition>` component. This interactive post shows an early look at the upcoming React feature, including some of its current implementation details, and explains how it overlaps a bit with Motion layout animations.
 
@@ -103,7 +103,9 @@ Expo unveiled what we expected, the first-ever universal app-hosting platform th
 
 ---
 
-📜 [Five years of React Native at Shopify](https://shopifyengineering.myshopify.com/blogs/engineering/five-years-of-react-native-at-shopify)
+[![Five years of React Native at Shopify](/emails/issues/217/shopify.jpg)](https://shopifyengineering.myshopify.com/blogs/engineering/five-years-of-react-native-at-shopify)
+
+[Five years of React Native at Shopify](https://shopifyengineering.myshopify.com/blogs/engineering/five-years-of-react-native-at-shopify)
 
 Positive feedback after migrating their 6 apps to React Native. Also mentioning what can be improved, such as debugging and upgrading.
 
