--- a/website/newsletter/217/index.mdx
+++ b/website/newsletter/217/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /217
-title: "This Week In React #217: ..."
+title: "This Week In React #217: View Transitions, RSC, SWR, Nextra, Rails, Compiler, EAS Hosting, Shopify, Skia, OTP, Gesture Handler, Radon, React-Query, TC55, Bun, CSS..."
 authors: [slorber]
 date: 01-15-2025
 unlisted: true
