--- a/website/newsletter/217/index.mdx
+++ b/website/newsletter/217/index.mdx
@@ -1,16 +1,17 @@
 ---
 slug: /217
-title: "This Week In React #217: View Transitions, RSC, SWR, Nextra, Rails, Compiler, EAS Hosting, Shopify, Skia, OTP, Gesture Handler, Radon, React-Query, TC55, Bun, CSS..."
+title: "This Week In React #217: View Transitions, RSC, Next.js, SWR, Nextra, React Router, Rails, Compiler, EAS Hosting, Shopify, Skia, OTP, Gesture Handler, Radon, React-Query, TC55, Bun, CSS..."
 authors: [slorber]
 date: 01-15-2025
-unlisted: true
 ---
 
 Hi everyone!
 
-<Todo />
+This week we continue to notice interesting activity around the upcoming `<ViewTransition>` component.
 
-🗓️ [React Paris 2025](https://react.paris/?utm_source=thisweekinreact) -  🇫🇷 Paris - 20 & 21 March (2 days) / 19th of March (Workshops) - Full Speaker line up just dropped! Jemima Abu, Antoine Chalifour and David Khourshid joined the line up. Get 20% off tickets with code "TWIR”
+Expo is finally launching its universal cross-platform hosting solution, and Shopify shared interesting feedback on its usage of React Native.
+
+Make sure to check our partner conf,️ [React Paris 2025](https://react.paris/?utm_source=thisweekinreact) -  🇫🇷 Paris - 20 & 21 March (2 days) / 19th of March (Workshops) - Full Speaker line up just dropped! Jemima Abu, Antoine Chalifour and David Khourshid joined the line up. Get 20% off tickets with code "TWIR”.
 
 <!-- truncate -->
 
@@ -29,9 +30,7 @@ import Support from "../_support.mdx";
 Bad performance is just another kind of bug 🐛 . And Sentry helps you find bugs fast, even the ones that aren’t obvious.
 
 - Cut chunks of time off of bad API calls
-
 - Reduce extremely costly, frequently pinged, or generally slow db operations
-
 - Uncover the source of a traffic spike spike in minutes
 
 Whether it’s an error or a slowdown, Sentry helps you fix issues fast and keep your app running smoothly. Because if it’s slow, it’s broken. [See for yourself](https://sentry.io/lp/new-apm/?utm_source=thisweekinreact&utm_medium=paid-community&utm_campaign=perf-fy26q1-evergreen&utm_content=newsletter-primary-slowbug-seehow).
