--- a/website/newsletter/218/index.mdx
+++ b/website/newsletter/218/index.mdx
@@ -20,26 +20,25 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-[![PropelAuth: Make Authentication Your Advantage](/emails/issues/218/propelauth.jpg)](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan82024)
+[![PropelAuth: Make Authentication Your Advantage](/emails/issues/218/propelauth.jpg)](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan222024)
 
-**[PropelAuth: Make Authentication Your Advantage](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan82024)**
+**[PropelAuth: Make Authentication Your Advantage](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan222024)**
 
-If your authentication isn't **helping you grow**, it's **holding you back**.  
-  
-With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan82024), you get everything you need to launch and scale your B2B product:
+If your authentication isn't **helping you grow**, it's **holding you back**.
 
-*   **Easy to understand** [documentation](https://docs.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan82024) and **friendly, fast support**.
-    
-*   **UIs that cover all your use cases** - signup, login, MFA, organization management and more.
-    
-*   **User impersonation** so you can provide top-notch support to your users.
-    
-*   **Enterprise SAML/SSO** and **advanced security features** so you can be upmarket-ready.
-    
-*   **User insights** to help you strategize and expand.
-    
+With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan222024), you get everything you need to launch and scale your B2B product:
 
-[Get started today](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan82024)
+- **Easy to understand** [documentation](https://docs.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan222024) and **friendly, fast support**.
+
+- **UIs that cover all your use cases** - signup, login, MFA, organization management and more.
+
+- **User impersonation** so you can provide top-notch support to your users.
+
+- **Enterprise SAML/SSO** and **advanced security features** so you can be upmarket-ready.
+
+- **User insights** to help you strategize and expand.
+
+[Get started today](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan222024)
 
 ---
 
@@ -57,11 +56,10 @@ With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign
 
 **[Tests are dead - Meticulous is here](https://www.meticulous.ai?utm_source=thisweekinreact&utm_campaign=jan22nd)**
 
-Meticulous creates and maintains an exhaustive suite of e2e ui tests with **zero** developer effort. 
+Meticulous creates and maintains an exhaustive suite of e2e ui tests with **zero** developer effort.
 
-  
-This quote from the CTO of Traba sums the product up best: "Meticulous has fundamentally changed the way we approach frontend testing in our web applications, fully eliminating the need to write any frontend tests. The software gives us confidence that every change will be completely regression tested, allowing us to ship more quickly with significantly fewer bugs in our code. The platform is easy to use and reduces the barrier to entry for backend-focused devs to contribute to our frontend codebase."  
-  
+This quote from the CTO of Traba sums the product up best: "Meticulous has fundamentally changed the way we approach frontend testing in our web applications, fully eliminating the need to write any frontend tests. The software gives us confidence that every change will be completely regression tested, allowing us to ship more quickly with significantly fewer bugs in our code. The platform is easy to use and reduces the barrier to entry for backend-focused devs to contribute to our frontend codebase."
+
 Meticulous is used by companies like Lattice, Bilt Rewards, Power and many others.
 
 This [post](https://www.meticulous.ai/blog/lessons-from-a-decade?utm_source=thisweekinreact&utm_campaign=jan15th) from our CTO sets out the context of why exhaustive testing can double engineering velocity.
