--- a/website/newsletter/218/index.mdx
+++ b/website/newsletter/218/index.mdx
@@ -114,7 +114,7 @@ Reanimated 4 is in beta, and it’s a huge one\! 🔥 The animation core has bee
 
 This is particularly exciting for React Native micro-interactions with greatly reduced boilerplate, and the ability to ship cross-platform animations. The existing worklet APIs remains retrocompatible and relevant for more advanced needs. However, the New Architecture is now a requirement.
 
-See also [Reactiiive migrates a Reanimated v2 animation to v4](https://reactiive.io/articles/css-animations-react-native) which greatly simplifies things (and we are not even talking about Reanimated v1 🙈).
+See also [Reactiiive migrates a Reanimated v2 animation to v4](https://reactiive.io/articles/css-animations-react-native) which greatly simplifies things. And we are not even talking about migrating old Reanimated v1 code 🙈.
 
 Side note: have you seen the [upcoming React `<ViewTransition>` component](https://motion.dev/blog/reacts-experimental-view-transition-api) being actively worked on? Notice that it’s not in React-DOM, there’s probably an exciting reason for that 👀.
 
