--- a/website/newsletter/218/index.mdx
+++ b/website/newsletter/218/index.mdx
@@ -116,7 +116,9 @@ This is particularly exciting for React Native micro-interactions with greatly r
 
 See also [Reactiiive migrates a Reanimated v2 animation to v4](https://reactiive.io/articles/css-animations-react-native) which greatly simplifies things. And we are not even talking about migrating old Reanimated v1 code 🙈.
 
-Side note: have you seen the [upcoming React `<ViewTransition>` component](https://motion.dev/blog/reacts-experimental-view-transition-api) being actively worked on? Notice that it’s not in React-DOM, there’s probably an exciting reason for that 👀.
+Side note: have you seen the [upcoming React `<ViewTransition>` component](https://motion.dev/blog/reacts-experimental-view-transition-api) being actively worked on? It’s not in React-DOM, and there’s probably an exciting reason for that 👀.
+
+---
 
 - 💸 [Codemagic - a great App Center alternative for React Native devs! 8x faster builds, CodePush, automated distribution. 1-month free trial!](https://codemagic.io/migration-from-app-center/?utm_source=newsletter&utm_medium=email&utm_campaign=app_center_this_week_react)
 - 🐦 [Expo 53 modules will support SwiftUI and Jetpack Compose](https://x.com/Baconbrix/status/1879900047397314813)
