--- a/website/newsletter/218/index.mdx
+++ b/website/newsletter/218/index.mdx
@@ -93,6 +93,8 @@ This [post](https://www.meticulous.ai/blog/lessons-from-a-decade?utm_source=this
 
 ## 📱 React-Native {#react-native}
 
+[![React Native 0.77](/emails/issues/218/react-native-0.77.jpg)](https://reactnative.dev/blog/2025/01/21/version-0.77)
+
 [**React Native 0.77**](https://reactnative.dev/blog/2025/01/21/version-0.77)
 
 As planned, the next React Native version just dropped. It notably ships with:
@@ -101,7 +103,7 @@ As planned, the next React Native version just dropped. It notably ships with:
 - Support for Android 15 edge-to-edge and 16KB memory page size (perf improvement)
 - iOS init template with Swift AppDelegate
 
-Good news for Expo users: [SDK 52 already supports v0.77](https://expo.dev/changelog/2025/01-21-react-native-0.77), alongside many infrastructure packages (Screens, RNGH, Reanimated). For React 19 support, we’ll have to wait v0.78, but I could come sooner than you expect.
+Good news for Expo users: [SDK 52 already supports v0.77](https://expo.dev/changelog/2025/01-21-react-native-0.77), alongside many infrastructure packages (Screens, RNGH, Reanimated). For React 19 support, we’ll have to wait v0.78, but I could come sooner than you expect!
 
 ---
 
