--- a/website/newsletter/218/index.mdx
+++ b/website/newsletter/218/index.mdx
@@ -1,14 +1,19 @@
 ---
 slug: /218
-title: "This Week In React #218: ..."
+title: "This Week In React #218: React-Scan, Server Functions, Portals, Forms, Storybook, React Aria, Unpic, React Native 0.77, Reanimated, Expo, Legend-List, Shadowlist, Document Picker, BottomTabs, Swift, Bun, Rspack, Vitest, Biome, ESLint..."
 authors: [slorber]
 date: 01-22-2025
-unlisted: true
 ---
 
 Hi everyone!
 
-<Todo />
+This is a crazy week, we have a lot of major releases coming from everywhere, in all the sections of this newsletter, that it's impossible to cover them all as they deserve.
+
+I'm particularly excited for the React Native ecosystem improving CSS compatibility with v0.77 and Reanimated v4. This is exciting for cross-platform development.
+
+The frontend ecosystem is on fire too 🔥 with awesome releases such as Bun 1.2, Rspack 1.2, Vitest 3.0.
+
+And, Tailwind v4 is expected to drop anytime soon too ! (just after I hit send of course 😅)
 
 <!-- truncate -->
 
@@ -106,6 +111,8 @@ As planned, the next React Native version just dropped. It notably ships with:
 Good news for Expo users: [SDK 52 already supports v0.77](https://expo.dev/changelog/2025/01-21-react-native-0.77), alongside many infrastructure packages (Screens, RNGH, Reanimated). For React 19 support, we’ll have to wait v0.78, but I could come sooner than you expect!
 
 ---
+
+[![Reanimated 4.0 beta](/emails/issues/218/reanimated4.jpg)](https://blog.swmansion.com/reanimated-4-is-new-but-also-very-familiar-b926dd59aa40)
 
 [**Reanimated 4.0 beta**](https://blog.swmansion.com/reanimated-4-is-new-but-also-very-familiar-b926dd59aa40)
 
