--- a/website/newsletter/218/index.mdx
+++ b/website/newsletter/218/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /218
-title: "This Week In React #218: React-Scan, Server Functions, Portals, Forms, Storybook, React Aria, Unpic, React Native 0.77, Reanimated, Expo, Legend-List, Shadowlist, Document Picker, BottomTabs, Swift, Bun, Rspack, Vitest, Biome, ESLint..."
+title: "This Week In React #218: React-Scan, Server Functions, Portals, Forms, Storybook, React Aria, Unpic, React Native 0.77, Reanimated, Expo, EAS, Legend-List, Shadowlist, Document Picker, BottomTabs, Swift, Bun, Rspack, Vitest, Biome, ESLint..."
 authors: [slorber]
 date: 01-22-2025
 ---
