--- a/website/newsletter/218/index.mdx
+++ b/website/newsletter/218/index.mdx
@@ -9,7 +9,7 @@ Hi everyone!
 
 This is a crazy week, we have a lot of major releases coming from everywhere, in all the sections of this newsletter, that it's impossible to cover them all as they deserve.
 
-I'm particularly excited for the React Native ecosystem improving CSS compatibility with v0.77 and Reanimated v4. This is exciting for cross-platform development.
+I'm particularly excited about the React Native ecosystem improving CSS compatibility with v0.77 and Reanimated v4. This is awesome news for cross-platform development compatibility.
 
 The frontend ecosystem is on fire too 🔥 with awesome releases such as Bun 1.2, Rspack 1.2, Vitest 3.0.
 
@@ -123,7 +123,7 @@ Reanimated 4 is in beta, and it’s a huge one\! 🔥 The animation core has bee
 
 This is particularly exciting for React Native micro-interactions with greatly reduced boilerplate, and the ability to ship cross-platform animations. The existing worklet APIs remains retrocompatible and relevant for more advanced needs. However, the New Architecture is now a requirement.
 
-See also [Reactiiive migrates a Reanimated v2 animation to v4](https://reactiive.io/articles/css-animations-react-native) which greatly simplifies things. And we are not even talking about migrating old Reanimated v1 code 🙈.
+See also [Reactiive migrates a Reanimated v2 animation to v4](https://reactiive.io/articles/css-animations-react-native) which greatly simplifies things. And we are not even talking about migrating old Reanimated v1 code 🙈.
 
 Side note: have you seen the [upcoming React `<ViewTransition>` component](https://motion.dev/blog/reacts-experimental-view-transition-api) being actively worked on? It’s not in React-DOM, and there’s probably an exciting reason for that 👀.
 
