--- a/website/newsletter/219/index.mdx
+++ b/website/newsletter/219/index.mdx
@@ -10,7 +10,7 @@ Hi everyone!
 
 <Todo />
 
-🗓️ [dotJS 2025](https://www.dotjs.io/?utm_source=thisweekinreact) -  🇫🇷 Paris - 03 April - Speakers are announced ! Ryan Dahl, creator of Node.js, Sarah Drasner, Director of Engineering at Google and Wes Bos, co-host of Syntax.fm podcast.  Get 20% off tickets with code "TWIR”.
+🗓️ [dotJS 2025](https://www.dotjs.io/?utm_source=thisweekinreact) -  🇫🇷 Paris - 03 April - Speakers are announced ! Ryan Dahl, creator of Node.js, Sarah Drasner, Director of Engineering at Google and Wes Bos, co-host of Syntax.fm podcast.  Get 15% off tickets with code "TWIR”.
 
 <!-- truncate -->
 
@@ -32,19 +32,17 @@ Leverage TypeScript to write [queries as code](https://docs.convex.dev/function
 
 And that’s just the beginning. With Convex, you can:
 
-*   Easily schedule functions and write cron jobs
-    
-*   Set up file storage
-    
-*   Write efficient server functions
-    
-*   Generate your backend with your favorite AI coding tool
-    
-*   And so much more…
-    
+- Easily schedule functions and write cron jobs
+
+- Set up file storage
+
+- Write efficient server functions
+
+- Generate your backend with your favorite AI coding tool
+
+- And so much more…
 
 [Try a Quickstart today](https://docs.convex.dev/quickstarts)
-
 
 ---
 
@@ -68,16 +66,15 @@ Reactile is an UI/UX turnkey framework which features an out-of-the-box, intuiti
 
 On top of that, Reactile also offers:
 
-*   A promise-based persistence mechanism which permits a uniform workflow across time and on multiple devices.
-    
-*   The possibility to use nested tabs for your tiles.
-    
-*   A simplified global search mechanism.
-    
-*   CSS @container based responsiveness.
-    
-*   And much more.
-    
+- A promise-based persistence mechanism which permits a uniform workflow across time and on multiple devices.
+
+- The possibility to use nested tabs for your tiles.
+
+- A simplified global search mechanism.
+
+- CSS @container based responsiveness.
+
+- And much more.
 
 Version 2 coming out soon. Get started with your unique 30-day free trial. Learn more about it on reactile.net.
 
